--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
       <!-----Skills----->
       <section id="Experiencias">
         <h1 class="titleExperiences js-scroll">Experiencias</h1>
-        <div class="js-scroll">
-            <div>
+        <div class="expriencias-container js-scroll">
+            <div class="g3ws-general-container">
                 <h2>G3WS General Web Solutions</h2>
                 <h3>Estagio Fullstack</h3>
                 <div>
-                    <ul>
+                    <ul class="list-experience-skills">
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
@@ -114,11 +114,11 @@
                 </div>
 
             </div>
-            <div>
+            <div class="make-container">
                 <h2>Make Acelerador de Vendas</h2>
                 <h3>Developer Front-End JR</h3>
                 <div>
-                    <ul>
+                    <ul class="list-experience-skills">
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
                         <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
