--- a/index.html
+++ b/index.html
@@ -67,23 +67,17 @@
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt="">TS</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nativo-de-reagir.svg" alt="">REACT</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/react-router-svgrepo-com.svg" alt="">REACT ROUTER</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS/React</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt="">REDUX</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS<br/>(Aprendendo)</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt="">VUE</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt="">VUE ROUTER</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/vuex-store.svg" alt="">VUEX</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icon-pinia.svg" alt="">Pinia</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nuxt-jc.svg" alt="">NUXT.JS</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nuxt-jc.svg" alt="">NUXT.JS/Vue</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">PostgreSQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel/PHP</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/java-icon.svg" alt="">Java</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/django-logo.png" alt="">DJANGO</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">PostgreSQL</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-tela.svg" alt="">CANVA</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">ADOBE XD</li>
