--- a/index.html
+++ b/index.html
@@ -64,26 +64,33 @@
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt="">SASS</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/Less.svg" alt="">LESS</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt="">TS</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JAVASCRIPT</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt="">TYPESCRIPT</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS/React</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS/REACT</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt="">REDUX</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nuxt-jc.svg" alt="">NUXT.JS/Vue</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nuxt-icon.svg" alt="">NUXT.JS/VUE</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel/PHP</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/java-icon.svg" alt="">Java</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/expressicon.png" alt="">EXPRESS</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nest.png" alt="">NEST.JS</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/knexicon.png" alt="">KNEX.JS</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/sequelizeicon.png" alt="">SEQUELIZE</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/Prismaicon.png" alt="">PRISMA ORM</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/fastifyicon.png" alt="">FASTIFY</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/mongosee.png" alt="">MONGOOSE</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">LARAVEL/PHP</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/java-icon.svg" alt="">JAVA</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/dotnet-icon.svg" alt="">DOTNET</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/django-logo.png" alt="">DJANGO</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">PostgreSQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/flaskicon.png" alt="">FLASK</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/fastapi.png" alt="">FASTAPI</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">POSTGRESQL</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MYSQL</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-tela.svg" alt="">CANVA</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">ADOBE XD</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-windows-10.svg" alt="">WINDOWS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-kali-linux.svg" alt="">KALI LINUX</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/ubuntu-logo-svgrepo-com.svg" alt="">UBUNTO</li>
         </ul>
       </section>
       <!-----Skills----->
