commit-add-logos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h1>Sobre mim</h1>
               <button id="buttonSuperior">x</button>
             </div>
-            <p>Olá,Meu nome é Marcos, sou um estudante assíduo de tecnologia. Atualmente, tenho 19 anos e estou
+            <p>Olá,Meu nome é Marcos, sou um estudante assíduo de tecnologia. Atualmente, tenho 21 anos e estou
                cursando a faculdade de Análise e Desenvolvimento de Sistemas. No entanto, estudo sobre 
                tecnologia e programação desde os 17 anos, acumulando uma certa bagagem de conhecimento. 
                Estou sempre procurando obter mais e mais conhecimento na área de tecnologia em geral pois 
@@ -56,41 +56,43 @@
       </section>
       <!-----Home----->
       <!-----Skills----->
-      <section id="Habilidades" class="partq2 mutautionVisibilit js-scroll">
-        <h1 class="secoes">HABILIDADES</h1>
+      <section id="Habilidades" class="partq2 mutautionVisibilit">
+        <h1 class="secoes js-scroll">HABILIDADES</h1>
         <ul class="habilidadeList">
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt="">SASS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/Less.svg" alt="">LESS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JAVASCRIPT</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt="">TYPESCRIPT</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS/REACT</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt="">REDUX</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nuxt-icon.svg" alt="">NUXT.JS/VUE</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/expressicon.png" alt="">EXPRESS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/nest.png" alt="">NEST.JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/knexicon.png" alt="">KNEX.JS</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/sequelizeicon.png" alt="">SEQUELIZE</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/Prismaicon.png" alt="">PRISMA ORM</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/fastifyicon.png" alt="">FASTIFY</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/mongosee.png" alt="">MONGOOSE</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">LARAVEL/PHP</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/java-icon.svg" alt="">JAVA</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/dotnet-icon.svg" alt="">DOTNET</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/django-logo.png" alt="">DJANGO</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/flaskicon.png" alt="">FLASK</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/fastapi.png" alt="">FASTAPI</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">POSTGRESQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MYSQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-tela.svg" alt="">CANVA</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">ADOBE XD</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt="">SASS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/Less.svg" alt="">LESS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JAVASCRIPT</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt="">TYPESCRIPT</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/nextjs-icon-svgrepo-com.svg" alt="">NEXT.JS/REACT</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt="">REDUX</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/nuxt-icon.svg" alt="">NUXT.JS/VUE</li>
+            <li class="imagse"><img class="imagse js-scroll " src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/expressicon.png" alt="">EXPRESS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/nest.png" alt="">NEST.JS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/knexicon.png" alt="">KNEX.JS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/sequelizeicon.png" alt="">SEQUELIZE</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/Prismaicon.png" alt="">PRISMA ORM</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/fastifyicon.png" alt="">FASTIFY</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/logo-dark-socketio.svg" alt="">SOCKET.IO</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/mongosee.png" alt="">MONGOOSE</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/laravel.svg" alt="">LARAVEL/PHP</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/java-icon.svg" alt="">JAVA</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/dotnet-icon.svg" alt="">DOTNET</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/django-logo.png" alt="">DJANGO</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/flaskicon.png" alt="">FLASK</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/fastapi.png" alt="">FASTAPI</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">POSTGRESQL</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MYSQL</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/wordpress-logo.png" alt="">WORDPRESS</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-tela.svg" alt="">CANVA</li>
+            <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">ADOBE XD</li>
         </ul>
       </section>
       <!-----Skills----->
@@ -102,15 +104,18 @@
                 <h3>Estagio Fullstack</h3>
                 <div>
                     <ul class="list-experience-skills">
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/expressicon.png" alt="">EXPRESS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/sequelizeicon.png" alt="">SEQUELIZE</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/logo-dark-socketio.svg" alt="">SOCKET.IO</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
                     </ul>
                 </div>
 
@@ -120,14 +125,15 @@
                 <h3>Developer Front-End JR</h3>
                 <div>
                     <ul class="list-experience-skills">
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt="">HTML</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">PHOTOSHOP</li>
-                        <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-html.svg" alt=""><p>HTML</p></li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-css.svg" alt="">CSS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-js.svg" alt="">JS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-jquery.svg" alt="">JQUERY</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/wordpress-logo.png" alt="">WORDPRESS</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-adobe-xd.svg">PHOTOSHOP</li>
+                        <li class="imagse"><img class="imagse js-scroll" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
                     </ul>
                 </div>
             </div>
@@ -373,17 +379,17 @@
             <p class="LevelNamelenguage">B1</p>
           </li>
           <li>
-            <h1 class="lenguage">inglês</h1>
+            <h1 class="lenguage">Inglês</h1>
             <img class="imgsIdiomas" src="./assets/imgs/Idiomas/euaflag.svg" alt="">
             <div class="levelSkillLenguage">
               <div class="pointerChecked"></div>
               <div class="pointerChecked"></div>
               <div class="pointerChecked"></div>
-              <div class="pointer"></div>
+              <div class="pointerChecked"></div>
               <div class="pointer"></div>
               <div class="pointer"></div>
             </div>
-            <p class="LevelNamelenguage">B1</p>
+            <p class="LevelNamelenguage">B2</p>
           </li>
           <li>  
             <h1 class="lenguage">Libras</h1>
