commit-add-animation

--- a/index.html
+++ b/index.html
@@ -147,20 +147,20 @@
           <div id="projectBank" class="projectClickBank js-scroll" >
             <h1 class="titleProjectsModify">BCommerce</h1>
             <ul class="tecnologiasProject">
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>  
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>  
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>
             </ul>
           </div>
           <div id="projectCars" class="projectClickCarros js-scroll">
             <h1 class="titleProjectsModify">Carros</h1>
             <ul class="tecnologiasProject">
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
+              <li class="imagse js-scroll"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
+              <li class="imagse js-scroll"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
+              <li class="imagse js-scroll"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
             </ul>
           </div>
           <div id="ProjectVirtualAssistent" class="projectClickAv js-scroll" >
@@ -173,12 +173,12 @@
           <div id="projectB" class="projectClickProjectB js-scroll">
             <h1 class="titleProjectsModify">Project-B</h1>
             <ul class="tecnologiasProject">
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nativo-de-reagir.svg" alt=""></li>
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt=""></li>  
-              <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-tela.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nativo-de-reagir.svg" alt=""></li>
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt=""></li>  
+              <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-tela.svg" alt=""></li>
             </ul>
           </div>
         <div class="projectInfo" id="BankInfo">
@@ -198,18 +198,18 @@
               <h1 class="especificacoesTitloBank">Especificações</h1>
               <ul class="tecnologiasInfoProjects">
                 <div>
-                  <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse"  src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>
                 </div>
                 <div>
-                  <li class="imagse" ><img class="imagse" src="./assets/imgs/iconsTech/expressjs.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse" src="./assets/imgs/iconsTech/knex.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse" src="./assets/imgs/iconsTech/ENV.png" alt=""></li>
-                  <li class="imagse" ><img class="imagse" src="./assets/imgs/iconsTech/jsonwebtoken.svg" alt=""></li>
-                  <li class="imagse" ><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>  
+                  <li class="imagse js-scroll" ><img class="imagse" src="./assets/imgs/iconsTech/expressjs.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse" src="./assets/imgs/iconsTech/knex.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse" src="./assets/imgs/iconsTech/ENV.png" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse" src="./assets/imgs/iconsTech/jsonwebtoken.svg" alt=""></li>
+                  <li class="imagse js-scroll" ><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>  
                 </div>
               </ul>
               <div class="explicacoesProject">
